# pico_sd_speedtest

./: Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs
