[package]
name = "pico_sd_speedtest"
version = "0.0.1"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.7", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { version = "0.4", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4", features = [
  "defmt",
  "time-driver",
  "rp2040",
  "intrinsics",
] }
futures = { version = "0.3", default-features = false, features = [
  "async-await",
] }
embassy-sync = "0.6"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }

embedded-sdmmc = { git = "https://github.com/Be-ing/embedded-sdmmc-rs", branch = "bisync", default-features = false, features = [
  "defmt-log",
] }
